[FIX] estate_payroll: fix payroll format
* Estate Assistante need to print Payroll Report.
* Payslip by team should in payroll batch period.
* Add leader name after team name.
* Fix last column of row total.
* No fingerprint attendance no pay (wage, overtime and piecerate)
* Remove i18n for Contract Type, Payslip Code (EDW, OT, PR).
* Add state to get_payslip_team to calculate length of approved payslip.
* Set payslip report table title different from internal coding to avoid localization.
* Display overtime hour column.
* Payslip per team required to display sub total row.
* Security: assistant create payslip
* Daily wage, overtime and piece rate validate to fingerprint.
* User required to see fingerprint status at upkeep labour.
* Add action reason used to record attendance without fingerprint

--- a/estate/views/estate_upkeep.xml
+++ b/estate/views/estate_upkeep.xml
@@ -62,6 +62,7 @@
                             domain="[('state', 'in', ('draft','confirmed'))]"/>
                     <filter name="filter_approved" string="Approved"
                             domain="[('state', 'in', ('approved', 'correction', 'payslip'))]"/>
+                    <separator/>
                     <filter name="filter_month" icon="terp-go-month" string="This Month"
                             domain="[('upkeep_date','&lt;=',(context_today()+relativedelta(day=31)).strftime('%%Y-%%m-%%d')), ('upkeep_date','&gt;=',(context_today()-relativedelta(day=1)).strftime('%%Y-%%m-%%d'))]"/>
                     <filter name="filter_year" icon="terp-go-year" string="This Year"
