--- a/hr_fingerprint_ams/views/hr_fingerprint.xml
+++ b/hr_fingerprint_ams/views/hr_fingerprint.xml
@@ -21,6 +21,7 @@
                         <group>
                             <group string="Fingerprint Data">
                                 <field name="db_id"/>
+                                <field name="terminal_id"/>
                                 <field name="employee_name"/>
                                 <field name="date"/>
                                 <field name="sign_in" widget="float_time"/>
