--- a/hr_fingerprint_ams/views/inherited_estate_upkeep_view.xml
+++ b/hr_fingerprint_ams/views/inherited_estate_upkeep_view.xml
@@ -15,5 +15,16 @@
             </field>
         </record>
 
+        <record id="inherited_upkeep_labour_view_tree" model="ir.ui.view">
+            <field name="name">upkeep.labour.view.tree.inherit</field>
+            <field name="model">estate.upkeep.labour</field>
+            <field name="inherit_id" ref="estate.upkeep_labour_view_tree"/>
+            <field name="arch" type="xml">
+                <xpath expr="//field[@name='prod_quantity_day']" position="after">
+                    <field name="is_fingerprint"/>
+                </xpath>
+            </field>
+        </record>
+
     </data>
 </openerp>
