[FIX] estate: support 2 method of activity selection (by code/name)
* Add Code Name field.
* Code name field as record name.
* Hide cross team (policy reason)

--- a/estate/views/estate_activity_view.xml
+++ b/estate/views/estate_activity_view.xml
@@ -8,6 +8,8 @@
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
                 <tree colors="blue:type=='view'">
+                    <!--<field name="complete_name"/>-->
+                    <field name="code"/>
                     <field name="complete_name"/>
                     <field name="wage_method"/>
                     <field name="type"/>
