[FIX] estate_workshop : 1.Fixing Bug maintenance request constraint Category unit id 2.Fixing Bug maintenance request constraint Category name [ADD] estate_vehicle: 1.Add demo data vehicle.

--- a/estate_vehicle/views/fleet_vehicle_timesheet.xml
+++ b/estate_vehicle/views/fleet_vehicle_timesheet.xml
@@ -39,13 +39,12 @@
                          </div>
 
                             <group>
-                                <field name="date_timesheet" string="Date" attrs="{'readonly' : [('state', '=', 'approve')]}" required="True"/>
+                                <field name="date_timesheet" string="Date" attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}" required="True"/>
                             </group>
 
                             <group>
                                 <tree>
-                                    <field name="timesheet_ids" track_visibility="onchange" attrs="{
-                                        'readonly': [('state','=','approve')]}"
+                                    <field name="timesheet_ids" track_visibility="onchange" attrs="{'readonly' : ['|',('state', '=', 'done'),('state','=','reject')]}"
                                         context="{'tree_view_ref' : 'estate_vehicle.view_tree_fleet_timesheet_activity_transport',
                                                }"/>
                                 </tree>
