--- a/estate_vehicle/views/view_summary_cost_vehicle.xml
+++ b/estate_vehicle/views/view_summary_cost_vehicle.xml
@@ -1,7 +1,7 @@
 <openerp>
     <data>
          <record model="ir.ui.view" id="view_summary_cost_vehicle_config_tree">
-            <field name="name">View Summary Cost Vehicle Detail</field>
+            <field name="name">Vehicle Cost Detail</field>
             <field name="model">v.summary.cost.vehicle.detail</field>
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
@@ -19,7 +19,7 @@
         </record>
 
         <record model='ir.ui.view' id='view_summary_cost_vehicle_detail_search'>
-            <field name="name">View Summary Cost Vehicle Detail Search</field>
+            <field name="name">Vehicle Cost Detail Search</field>
             <field name="model">v.summary.cost.vehicle.detail</field>
             <field name="arch" type="xml">
                 <search string="Vehicles Summary Cost" >
@@ -40,7 +40,7 @@
         </record>
 
          <record model="ir.ui.view" id="view_summary_cost_vehicle_tree">
-            <field name="name">View Summary Cost Vehicle</field>
+            <field name="name">Vehicle Running Account(VRA)</field>
             <field name="model">v.summary.cost.vehicle</field>
             <field name="priority" eval="1"/>
             <field name="arch" type="xml">
@@ -59,7 +59,7 @@
         </record>
 
         <record model='ir.ui.view' id='view_summary_cost_vehicle_form'>
-            <field name="name">View Summary Cost Vehicle Form</field>
+            <field name="name">Vehicle Running Account(VRA)</field>
             <field name="model">v.summary.cost.vehicle</field>
             <field name="arch" type="xml">
                 <form string="View Summary Cost Vehicle">
@@ -118,7 +118,7 @@
         </record>
 
         <record model='ir.ui.view' id='view_summary_cost_vehicle_search'>
-            <field name="name">View Summary Cost Vehicle Search</field>
+            <field name="name">Vehicle Running Account(VRA) Search</field>
             <field name="model">v.summary.cost.vehicle</field>
             <field name="arch" type="xml">
                 <search string="Vehicles Summary Cost" >
@@ -289,14 +289,14 @@
         </record>
 
         <record model="ir.actions.act_window" id="action_list_view_summary_vehicle_detail">
-                <field name="name">View Summary Cost Vehicle Detail</field>
+                <field name="name">Vehicle Cost Detail</field>
                 <field name="res_model">v.summary.cost.vehicle.detail</field>
                 <field name="view_mode">tree</field>
                 <field name="context">{"search_default_groupby_vehicle" : True}</field>
         </record>
 
         <record model="ir.actions.act_window" id="action_list_view_summary_vehicle">
-                <field name="name">View Summary Cost Vehicle</field>
+                <field name="name">Vehicle Running Account(VRA)</field>
                 <field name="res_model">v.summary.cost.vehicle</field>
                 <field name="view_mode">tree,form</field>
                 <field name="context">{"search_default_groupby_date" : True}</field>
