[FIX] estate_vehicle: 1. Bug menu Fleet vehicle timesheet cannot show when user administrator

--- a/estate_vehicle/views/fleet_vehicle_timesheet.xml
+++ b/estate_vehicle/views/fleet_vehicle_timesheet.xml
@@ -116,6 +116,6 @@
          <menuitem id="fleet_vehicle_timesheet_activity" name="Fleet Vehicle Timesheet"
                   parent="estate_vehicle.estate_vehicle_timesheet_menu"
                   action="action_fleet_vehicle_timesheet_activity_transport"
-                 groups="base.group_no_one" sequence="12"/>
+                 sequence="12"/>
     </data>
 </openerp>
