[ADD] Estate_vehicle : Cannot trigger between fleet.vehicle , asset.asset , Mro.order 1.create trigger in fleet.vehicle to change state in asset.asset 2.create trigger in mro.order to change state in fleet vehicle and asset.asset 3.add parent activity in estate_activity

--- a/estate_vehicle/views/inherit_vehicle_log_oil.xml
+++ b/estate_vehicle/views/inherit_vehicle_log_oil.xml
@@ -71,6 +71,7 @@
              <field name="arch" type="xml">
                  <xpath expr="//field[@name='activity_type']" position="after">
                      <field name="status" string="Status Vehicle" attrs="{'invisible':[('activity_type','!=', 'vehicle')]}"/>
+                     <field name="activity_vehicle_parent_id" string="Parent Activities Estate" options="{'no_create_edit': True}" attrs="{'invisible':[('activity_type','!=', 'estate')]}"/>
                  </xpath>
              </field>
          </record>
