--- a/estate/views/estate_hr_view.xml
+++ b/estate/views/estate_hr_view.xml
@@ -56,6 +56,7 @@
             <field name="arch" type="xml">
                 <tree editable="True">
                     <field name="employee_id"/>
+                    <field name="nik_number" readonly="True"/>
                     <field name="contract_type" readonly="True"/>
                     <field name="contract_period" readonly="True"/>
                 </tree>
