--- a/estate/views/estate_upkeep.xml
+++ b/estate/views/estate_upkeep.xml
@@ -270,11 +270,14 @@
                                         <field name="product_uom_id" string="UoM"/>
                                         <field name="amount"/>
                                         <field name="activity_id" string="Activity" options="{'no_create': True}"/>
+                                        <field name="location_id"/>
                                         <field name="activity_uom_id" string="UoM"/>
                                         <!-- Do not remove field below -->
                                         <field name="activity_unit_amount" string="Act. Qty." invisible="True"/>
                                         <field name="ratio_product_activity" string="Ratio"/>
                                         <field name="prod_product_activity" string="Norm" invisible="True" groups="estate.estate_manager"/>
+                                        <field name="division_id" invisible="True"/>
+                                        <field name="upkeep_id" invisible="True"/>
                                         <!--<field name="activity_unit_amount" string="Qty. Act"/>-->
                                         <!--<field name="ratio_product_activity" string="Ratio"/>-->
                                         <!-- -->
